Added all controls to the 3 forms

--- a/SimpleDataApp/SimpleDataApp.csproj
+++ b/SimpleDataApp/SimpleDataApp.csproj
@@ -65,6 +65,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FillOrCancel.resx">
+      <DependentUpon>FillOrCancel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Navigation.resx">
       <DependentUpon>Navigation.cs</DependentUpon>
     </EmbeddedResource>
